--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	<title>zfx</title>
-	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+	<meta name="keywords" content="zfx" />
+	<meta name="description" content="zfx" />
 	<link rel="stylesheet" href="style/cssReset.css">
 	<link rel="stylesheet" href="style/common.css">
 	<link rel="stylesheet" href="style/main.css">
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/zfx.js"></script>
+	<!-- <script src="js/jquery-3.1.1.min.js"></script> -->
+    <script src="js/jquery.js"></script>
+	<script src="js/jquery.superslide.2.1.1.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.validate.unobtrusive.min.js"></script>
+    <script src="js/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="js/zfx.js"></script>
 </head>
 <body>
 	<div class="topbox">
@@ -75,9 +83,34 @@
 			</ul>
 		</div>	
 	</div>
+	<!-- <div class="clearfix"></div> -->
 		
-	<div class="content">
-		
+	<div class="bannerbox">
+		<div class="banner">
+			<ul class="51buypic">
+				<li>
+					<a href="">
+						<img src="images/1.jpg" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/2.jpg" alt="">
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/3.jpg" alt="">
+					</a>
+				</li>
+			</ul>
+			<a class="prev" href=""></a>
+			<a class="next" href=""></a>
+			<div class="num">
+				<ul>
+				</ul>
+			</div>
+		</div>
 	</div>
 
 	<div class="footer">
