--- a/index.html
+++ b/index.html
@@ -110,9 +110,25 @@
 			</div>
 		</div>
 	</div>
+	
+	<!-- 旋转图片 -->
+	<div class="section">
+		<div class="trans_img">
+			<p>旋转音乐盒</p>
+			<img src="images/yyh.jpg" alt="">
+		</div>
+		
+	</div>
 
 	<div class="footer">
-		
+		<div class="footerbox">
+			<div class="footer_left fl">
+				<img src="images/szy.jpg" alt="">
+			</div>
+			<div class="footer_right fr">
+				<p>王子曰：仲永之通悟，受之天也。其受之天也，贤于材人远矣。卒之为众人，则其受于人者不至也。彼其受之天也，如此其贤也，不受之人，且为众人；今夫不受之天，固众人，又不受之人，得为众人而已耶？</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
