--- a/index.html
+++ b/index.html
@@ -113,11 +113,18 @@
 	
 	<!-- 旋转图片 -->
 	<div class="section">
-		<div class="trans_img">
+		<div class="trans_img fl">
 			<p>旋转音乐盒</p>
 			<img src="images/yyh.jpg" alt="">
 		</div>
-		
+		<div class="trans_img2 fl">
+			<p>旋转音乐盒2</p>
+			<img src="images/yinyuehe.jpg" alt="">
+		</div>
+		<div class="trans_img2 fl">
+			<p>旋转音乐盒2</p>
+			<img src="images/musict.jpg" alt="">
+		</div>
 	</div>
 
 	<div class="footer">
