--- a/index.html
+++ b/index.html
@@ -114,19 +114,20 @@
 	<!-- 旋转图片 -->
 	<div class="section">
 		<div class="trans_img fl">
-			<p>旋转音乐盒</p>
-			<img src="images/yyh.jpg" alt="">
+			<p>旋转1</p>
+			<div class="trans_img1"><img src="images/yyh.jpg" alt=""></div>
 		</div>
-		<div class="trans_img2 fl">
-			<p>旋转音乐盒2</p>
-			<img src="images/yinyuehe.jpg" alt="">
+		<div class="trans_img fl">
+			<p>旋转2</p>
+			<div class="trans_img2"></div>
 		</div>
-		<div class="trans_img2 fl">
-			<p>旋转音乐盒2</p>
-			<img src="images/musict.jpg" alt="">
+		<div class="trans_img fl">
+			<p>旋转3</p>
+			<div class="trans_img3"></div>
 		</div>
 	</div>
-
+	
+	<!-- 底部 -->
 	<div class="footer">
 		<div class="footerbox">
 			<div class="footer_left fl">
