--- a/index.html
+++ b/index.html
@@ -125,6 +125,35 @@
 			<p>旋转3</p>
 			<div class="trans_img3"></div>
 		</div>
+		<div class="trans_box fl">
+			<p>not supported in IE</p>
+			<ul>
+			    <li>第1个盒子</li>
+			    <li>第2个盒子</li>
+			    <li>第3个盒子</li>
+			    <li>第4个盒子</li>
+			    <li>第5个盒子</li>
+			    <li>第6个盒子</li>
+			</ul>
+		</div>
+		<div class="wrap fl">
+			<p>not supported in IE</p>
+			<div class="cube">
+				<div class="out-front">前面</div>
+				<div class="out-back">后面</div>
+				<div class="out-left">左面</div>
+				<div class="out-right">右面</div> 
+				<div class="out-top">上面</div>
+				<div class="out-bottom">下面</div>
+
+				<span class="in-front"></span>
+				<span class="in-back"></span>
+				<span class="in-left"></span>
+				<span class="in-right"></span>
+				<span class="in-top"></span>
+				<span class="in-bottom"></span>
+			</div>
+		</div>
 	</div>
 	
 	<!-- 底部 -->
