--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 				<li class="topnav">
 					<a href="">下拉菜单可点击2</a>
 					<ul>
-						<li><a href="html/nianli.html">@keyframes</a></li>
+						<li><a href="html/xingji.html">星级评分</a></li>
 						<li><a href="html/numberClock.html">数字时钟</a></li>
-						<li><a href="html/nianli.html">border-radius</a></li>
-						<li><a href="html/nianli.html">text-shadow</a></li>
-						<li><a href="html/nianli.html">Gradient</a></li>
+						<li><a href="html/huandeng.html">幻灯片上下滑动</a></li>
+						<li><a href="html/setTimeoutMenu.html">延迟菜单</a></li>
+						<li><a href="html/rightMenu.html">自定义右键菜单</a></li>
 					</ul>
 				</li>
 				<li class="topnav">
