--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 						<li><a href="html/nianli.html">简易年历</a></li>
 						<li><a href="html/changeApacity.html">移入改变透明度</a></li>
 						<li><a href="html/mouseover.html">移入改变样式</a></li>
-						<li><a href="html/tishi.html">提示框</a></li>
 					</ul>
 				</li>
 				<li class="topnav">
@@ -66,13 +65,14 @@
 					</ul>
 				</li>
 				<li class="topnav">
-					<a href="">no</a>
+					<a href="">下拉菜单可点击5</a>
 					<ul>
-						<li><a href="">no</a></li>
-						<li><a href="">no</a></li>
-						<li><a href="">no</a></li>
-						<li><a href="">no</a></li>
-						<li><a href="">no</a></li>
+						<li><a href="html/max.html">字符统计</a></li>
+						<li><a href="html/movediv.html">拖尾特效</a></li>
+						<li><a href="html/print.html">打印乘法表</a></li>
+						<li><a href="html/daohanglan.html">竖版导航栏</a></li>
+						<li><a href="html/tishi.html">提示框</a></li>
+						<li><a href="html/canvas.html">2D旋转</a></li>
 					</ul>
 				</li>
 			</ul>
