--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="style/common.css">
 	<link rel="stylesheet" href="style/main.css">
 	<script src="js/jquery-3.1.1.min.js"></script>
+	<script src="js/mootools.js" type="text/javascript"></script>
+	<script src="js/3dcarousel.js" type="text/javascript"></script>
     <script src="js/zfx.js"></script>
 </head>
 <body>
@@ -124,6 +126,18 @@
 		<div class="trans_img fl">
 			<p>旋转3</p>
 			<div class="trans_img3"></div>
+		</div>
+		<!-- 宝宝 -->
+		<div class="carousel fl">
+			<div id="carousel" class="fl">
+				<!-- <p>.......</p> -->
+				<div><a href=""><img src="images/dreamweaver.jpg" /></a></div>
+				<div><a href=""><img src="images/director.jpg" /></a></div>
+				<div><a href=""><img src="images/flash.jpg" /></a></div>
+				<div><a href=""><img src="images/fireworks.jpg" /></a></div>
+				<div><a href=""><img src="images/swf-player.jpg" /></a></div>
+				<div><a href=""><img src="images/coldfusion.jpg" /></a></div>
+			</div>
 		</div>
 		<div class="trans_box fl">
 			<p>not supported in IE</p>
