--- a/html/max.html
+++ b/html/max.html
@@ -35,7 +35,7 @@
                     }
                 }
                 var txt=document.getElementById("txta");
-                txt.innerHTML=("出现次数最多的字符："+max_key+"，出现的次数"+max_num);
+                txt.innerHTML=("出现次数最多的字符："+max_key+"出现的次数："+max_num);
             }
             var btn=document.getElementById("btn");
             btn.onclick=function(){
@@ -49,9 +49,9 @@
 <body>
     <div>
         <p>请输入一串字符</p>
-        <input id="txt" type="text" size="40px">
+        <input id="txt" type="text" size="24px">
         <input id="btn" type="button" value="提交">
-        <textarea id="txta" style="display: block;margin-top: 30px;" cols="48px" rows="10px"></textarea>
+        <textarea id="txta" style="display: block;margin-top: 30px;font-size: 18px;" cols="20px" rows="3px"></textarea>
     </div>
     
 </body>
