--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 			<ul class="topnavbox fr">
 				<li class="topnav">
-					<a class="topon" href="">首页</a>
+					<a href="html/introduce.html" class="topon" href="">自我介绍</a>
 				</li>
 				<li class="topnav">
 					<a href="">下拉菜单可点击1</a>
