--- a/html/introduce.html
+++ b/html/introduce.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta charset="sutf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>’≈∏¥–«</title>
 	<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="js/jquery.simple-text-rotator.js"></script>
