--- a/html/introduce.html
+++ b/html/introduce.html
@@ -1,15 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>ÕÅ¸´ĞÇ</title>
+	<meta charset="UTF-8">
+	<title>å¼ å¤æ˜Ÿ</title>
 	<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="js/jquery.simple-text-rotator.js"></script>
     <script src="js/jquery-1.3.2.min.js"></script>
   	<script src="js/jquery.easing.1.3.js"></script>
   	<script src="js/jQueryRotate.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/simpletextrotator.css">
-
-    <style type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/simpletextrotator.css"><style type="text/css">
+    <style>
     	body{
     		margin: 0px;
     		padding: 0px;
@@ -29,7 +29,7 @@
     	}
     	.cons{
     		position: absolute;
-    		font-family: 'ËÎÌå';
+    		font-family: 'å®‹ä½“';
     		cursor: pointer;
     	}
     	#con1{
@@ -41,7 +41,7 @@
     		opacity: 0.1;
     	}
         #con1 span{
-            font-family: 'ĞÂËÎÌå';
+            font-family: 'æ–°å®‹ä½“';
         }
     	#con2{
     		top: 360px;
@@ -180,13 +180,13 @@
     		color: white;
     	}
     	#con10_span1{
-    		font-family: 'Î¢ÈíÑÅºÚ';
+    		font-family: 'å¾®è½¯é›…é»‘';
     	}
     	#con10_span2{
-    		font-family: 'Î¢ÈíÑÅºÚ';
+    		font-family: 'å¾®è½¯é›…é»‘';
     	}
     	#con10_span3{
-    		font-family: 'ËÎÌå';
+    		font-family: 'å®‹ä½“';
     	}
         #double_span{
             display: none;
@@ -208,7 +208,7 @@
             color: gray;
         }
         #web_span{
-            font-family: 'Î¢ÈíÑÅºÚ';
+            font-family: 'å¾®è½¯é›…é»‘';
         }
         #age_span{
             color: gray;
@@ -216,60 +216,60 @@
 
 
     	.rotate{
-            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;    // ¶¯»­Ö´ĞĞµÄÊ±¼ä
+            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;    // åŠ¨ç”»æ‰§è¡Œçš„æ—¶é—´
             -moz-transition: opacity 2s ease,-webkit-transform 2s ease;
             -ms-transition: opacity 2s ease,-webkit-transform 2s ease;
             -o-transition: opacity 2s ease,-webkit-transform 2s ease;
             transition: opacity 2s ease,-webkit-transform 2s ease;
-            -webkit-transform: rotate(270deg);  // divĞı×ªµÄ½Ç¶È
+            -webkit-transform: rotate(270deg);  // divæ—‹è½¬çš„è§’åº¦
             -moz-transform: rotate(270deg);
             -ms-transform: rotate(270deg);
             -o-transform: rotate(270deg);
             transform: rotate(270deg);
         }
         .rotate2{
-            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // ¶¯»­Ö´ĞĞµÄÊ±¼ä
+            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // åŠ¨ç”»æ‰§è¡Œçš„æ—¶é—´
             -moz-transition: opacity 2s ease,-webkit-transform 2s ease;
             -ms-transition: opacity 2s ease,-webkit-transform 2s ease;
             -o-transition: opacity 2s ease,-webkit-transform 2s ease;
             transition: opacity 2s ease,-webkit-transform 2s ease;
-            -webkit-transform: rotate(405deg);  // divĞı×ªµÄ½Ç¶È
+            -webkit-transform: rotate(405deg);  // divæ—‹è½¬çš„è§’åº¦
             -moz-transform: rotate(405deg);
             -ms-transform: rotate(405deg);
             -o-transform: rotate(405deg);
             transform: rotate(405deg);
         }
         .rotate3{
-            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // ¶¯»­Ö´ĞĞµÄÊ±¼ä
+            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // åŠ¨ç”»æ‰§è¡Œçš„æ—¶é—´
             -moz-transition: opacity 2s ease,-webkit-transform 2s ease;
             -ms-transition: opacity 2s ease,-webkit-transform 2s ease;
             -o-transition: opacity 2s ease,-webkit-transform 2s ease;
             transition: opacity 2s ease,-webkit-transform 2s ease;
-            -webkit-transform: rotate(495deg);  // divĞı×ªµÄ½Ç¶È
+            -webkit-transform: rotate(495deg);  // divæ—‹è½¬çš„è§’åº¦
             -moz-transform: rotate(495deg);
             -ms-transform: rotate(495deg);
             -o-transform: rotate(495deg);
             transform: rotate(495deg);
         }
         .rotate4{
-            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // ¶¯»­Ö´ĞĞµÄÊ±¼ä
+            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // åŠ¨ç”»æ‰§è¡Œçš„æ—¶é—´
             -moz-transition: opacity 2s ease,-webkit-transform 2s ease;
             -ms-transition: opacity 2s ease,-webkit-transform 2s ease;
             -o-transition: opacity 2s ease,-webkit-transform 2s ease;
             transition: opacity 2s ease,-webkit-transform 2s ease;
-            -webkit-transform: rotate(540deg);  // divĞı×ªµÄ½Ç¶È
+            -webkit-transform: rotate(540deg);  // divæ—‹è½¬çš„è§’åº¦
             -moz-transform: rotate(540deg);
             -ms-transform: rotate(540deg);
             -o-transform: rotate(540deg);
             transform: rotate(540deg);
         }
         .rotate5{
-            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // ¶¯»­Ö´ĞĞµÄÊ±¼ä
+            -webkit-transition: opacity 2s ease,-webkit-transform 2s ease;     // åŠ¨ç”»æ‰§è¡Œçš„æ—¶é—´
             -moz-transition: opacity 2s ease,-webkit-transform 2s ease;
             -ms-transition: opacity 2s ease,-webkit-transform 2s ease;
             -o-transition: opacity 2s ease,-webkit-transform 2s ease;
             transition: opacity 2s ease,-webkit-transform 2s ease;
-            -webkit-transform: rotate(720deg);  // divĞı×ªµÄ½Ç¶È
+            -webkit-transform: rotate(720deg);  // divæ—‹è½¬çš„è§’åº¦
             -moz-transform: rotate(720deg);
             -ms-transform: rotate(720deg);
             -o-transform: rotate(720deg);
@@ -279,7 +279,7 @@
     </style>
 
     <script type="text/javascript">
-    	var times=800;   //¶¯»­Ö´ĞĞµÄÊ±¼ä
+    	var times=800;   //åŠ¨ç”»æ‰§è¡Œçš„æ—¶é—´
     	var n=0;
     	var temp=1;
     	function bg_click(){
@@ -384,7 +384,7 @@
 					}
 					case 6:{  
                         $('#double_span').css({display: 'none'});
-                        $('#double_span1').html('ºÜË®');
+                        $('#double_span1').html('å¾ˆæ°´');
 						$('#con1').animate({ left: '-=0', opacity: '0.1', fontSize: '10px'}, times);
 	                    $('#con3').animate({ left: '-=0', top: '+=0', opacity: '0.05', fontSize: '1px'}, times);
 	                    $('#con4').animate({ left: '-=0', top:'+=0', opacity: '0.1', fontSize: '8px'}, times);
@@ -440,12 +440,12 @@
 						$('#con7').animate({opacity: '0.1'}, times);
 						$('#con1').animate({top: '+=240', left: '+=600', fontSize: '15px'}, times);
 						$('#con8').animate({fontSize: '45px', opacity: '1.0'}, times, function(){
-							$('#title_span').css({color: 'black', fontStyle: 'bold', fontFamily: 'Î¢ÈíÑÅºÚ'});
+							$('#title_span').css({color: 'black', fontStyle: 'bold', fontFamily: 'å¾®è½¯é›…é»‘'});
 							$('#basket').css({color: 'red', fontStyle: 'italic'});
 							$('#roll').css({color: 'blue', fontStyle: 'italic'});
 							$('#sing').css({color: '#7A10A8', fontStyle: 'italic'});
 							$('#movie').css({color: '#D8970A', fontStyle: 'italic'});
-							$('#like_span').css({color: 'black', fontStyle: 'bold', fontFamily: 'ËÎÌå'});
+							$('#like_span').css({color: 'black', fontStyle: 'bold', fontFamily: 'å®‹ä½“'});
 							temp=1;
 						});
 						break;
@@ -487,26 +487,26 @@
 </head>
 <body scroll="no" style="overflow-x:hidden;"  onclick="bg_click()">
 	<div id="bg">
-        <div id="tip"><span>µã»÷ÍøÒ³ ä¯ÀÀÎÒµÄ¼ò½é</span></div>
-        <div id="con1" class="cons"><span>Hello World!!!</span><br/><span>Welcome to </span><span class="name_span">ÕÅ¸´ĞÇ</span><span>'s OwnWeb</span></div>
+        <div id="tip"><span>ç‚¹å‡»ç½‘é¡µ æµè§ˆæˆ‘çš„ç®€ä»‹</span></div>
+        <div id="con1" class="cons"><span>Hello World!!!</span><br/><span>Welcome to </span><span class="name_span">å¼ å¤æ˜Ÿ</span><span>'s OwnWeb</span></div>
 
-        <div id="con2" class="cons"><span id="me_top">ÎÒ</span><br/><span id="me_one">±ÏÒµÓÚ<a href="http://www.njtu.edu.cn/">±±¾©½»Í¨´óÑ§</a></span><br/><span id="me_two">µçÆø¹¤³ÌÑ§Ôº</span><br/><span id="me_three">µçÁ¦ÏµÍ³×Ô¶¯»¯Óë×Ô¶¯»¯×¨Òµ </span></div>
+        <div id="con2" class="cons"><span id="me_top">æˆ‘</span><br/><span id="me_one">æ¯•ä¸šäº<a href="http://www.njtu.edu.cn/">åŒ—äº¬äº¤é€šå¤§å­¦</a></span><br/><span id="me_two">ç”µæ°”å·¥ç¨‹å­¦é™¢</span><br/><span id="me_three">ç”µåŠ›ç³»ç»Ÿè‡ªåŠ¨åŒ–ä¸è‡ªåŠ¨åŒ–ä¸“ä¸š </span></div>
 
-        <div id="con3" class="cons">ÓÉÓÚÈÈ°®WEBÇ°¶Ë</div>
+        <div id="con3" class="cons">ç”±äºçƒ­çˆ±WEBå‰ç«¯</div>
 
-		<div id="con4" class="cons"><span>×ÔÑ§WEBÇ°¶Ë</span></div>
+		<div id="con4" class="cons"><span>è‡ªå­¦WEBå‰ç«¯</span></div>
 
-		<div id="con5" class="cons"><span class="double_span_class">ËäÈ»»¹ </span><span id="double_span1" class="double_span_class">ºÜË®</span> <span id="double_span" class="double_span_class">ºÜË®</span></div>
+		<div id="con5" class="cons"><span class="double_span_class">è™½ç„¶è¿˜ </span><span id="double_span1" class="double_span_class">å¾ˆæ°´</span> <span id="double_span" class="double_span_class">å¾ˆæ°´</span></div>
 
-		<div id="con6" class="cons"><span>µ«ÎÒÓĞÀíÏë </span><span id="address">ÓĞÃÎÏë</span></div>
+		<div id="con6" class="cons"><span>ä½†æˆ‘æœ‰ç†æƒ³ </span><span id="address">æœ‰æ¢¦æƒ³</span></div>
 
-		<div id="con7" class="cons"><span>ÏÂÒ»²½´òËãÑ§Ï°Ò»Ğ©</span><span id="php_web"> Ç°¶Ë¿ò¼Ü </span><span>·şÎñÆ÷½Å±¾</span></div>
+		<div id="con7" class="cons"><span>ä¸‹ä¸€æ­¥æ‰“ç®—å­¦ä¹ ä¸€äº›</span><span id="php_web"> å‰ç«¯æ¡†æ¶ </span><span>æœåŠ¡å™¨è„šæœ¬</span></div>
 
-		<div id="con8" class="cons"><span id="title_span">ÒµÓàÊ±¼ä</span><br/><span id="basket">Ï²»¶¿´Êé </span><span id="roll">µÇÉ½ </span><span id="sing">DOTA2 </span><span id="movie">¿´µçÓ°</span></div>
+		<div id="con8" class="cons"><span id="title_span">ä¸šä½™æ—¶é—´</span><br/><span id="basket">å–œæ¬¢çœ‹ä¹¦ </span><span id="roll">ç™»å±± </span><span id="sing">DOTA2 </span><span id="movie">çœ‹ç”µå½±</span></div>
 
-		<div id="con9" class="cons">Èç¹ûÄãÒ²ÊÇ<span id="web_span">Web³ÌĞòÔ³</span><br/><span>¿ÉÒÔ¼ÓÎÒ </span><span id="qq_span">QQ:502545703</span><br/><span>ÆÚ´ıºÍÄú¼¼Êõ½»Á÷</span></div>
+		<div id="con9" class="cons">å¦‚æœä½ ä¹Ÿæ˜¯<span id="web_span">Webç¨‹åºçŒ¿</span><br/><span>å¯ä»¥åŠ æˆ‘ </span><span id="qq_span">QQ:502545703</span><br/><span>æœŸå¾…å’Œæ‚¨æŠ€æœ¯äº¤æµ</span></div>
 
-        <div id="con10" class="cons"><span id="con10_span1">ÏÖÔÚµÄÅ¬Á¦&nbsp;</span><span id="con10_span2">Ö»ÎªÁË½«À´µÄĞÒ¸£&nbsp;&nbsp;</span><span id="con10_span3">Ô¸´ó¼ÒÒ»ÆğÅ¬Á¦</span><br/><br/><span style="width: 100%;display: inline-block;text-align: center;">OVER</span></div>
+        <div id="con10" class="cons"><span id="con10_span1">ç°åœ¨çš„åŠªåŠ›&nbsp;</span><span id="con10_span2">åªä¸ºäº†å°†æ¥çš„å¹¸ç¦&nbsp;&nbsp;</span><span id="con10_span3">æ„¿å¤§å®¶ä¸€èµ·åŠªåŠ›</span><br/><br/><span style="width: 100%;display: inline-block;text-align: center;">OVER</span></div>
      
 	</div>
 </body>
